# fints

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_banks.py
data/: fints_institutes.csv
src/: audit.rs  banks.rs  banks_generated.rs  debug.rs  dkb.rs  error.rs  flow.rs  lib.rs  message.rs  parser.rs  protocol.rs  serializer.rs  transport.rs  types.rs  workflow.rs
src/segments/: builder.rs  mod.rs  response.rs
src/workflow/: ing.rs
tests/: banks_test.rs  cross_test.rs  integration_test.rs  mock_server.py  parser_additional_test.rs  protocol_additional_test.rs  protocol_test.rs
